# schemascript

./: .gitignore  .gitlab-ci.yml  .npmignore  ReadMe.md  biome.json  package.json  tsconfig.json
drizzle/: 0000_modern_big_bertha.sql  0000_small_hobgoblin.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
examples/: post.ts  user.ts
runtime/: Cargo.toml
runtime/src/: async_database.rs  chat.rs  js_host.rs  lib.rs  main.rs  onnx_engine.rs  types.rs  wasm_host.rs
scripts/: build.ts  publish.ts  seed.ts  verify-pkg.ts
src/: ai.ts  main.ts
src/artefact/schemascript/: ReadMe.md  index.ts  package.json  tsconfig.json
src/data/: index.ts
src/data/core/: _constant.ts  constant.ts  (+8 more)
src/utils/: dedent.test.ts  dedent.ts  dedent.unit.test.ts  freeze.ts  freeze.unit.test.ts  macro.ts  test-policy.integration.test.ts
temp_test_array_e2e_1773535675321/: schema.ts
temp_test_array_e2e_1773535781077/migrations/: 0000_icy_winter_soldier.sql
temp_test_array_e2e_comprehensive_1773336256103/: schema.ts
temp_test_array_e2e_comprehensive_1773336256103/migrations/: 0000_gigantic_bill_hollister.sql
temp_test_array_e2e_comprehensive_1773336275578/: schema.ts
temp_test_identifier_e2e_1773304422184/migrations/: 0000_concerned_mantis.sql
temp_test_identifier_e2e_1773535775921/: schema.ts
temp_test_schema_e2e_array_1773304428650/migrations/: 0000_free_marvel_zombies.sql
temp_test_schema_e2e_array_1773304429482/: schema.ts
temp_test_schema_e2e_optional_1773535678860/: schema.ts
temp_test_schema_e2e_optional_1773536955831/migrations/: 0000_charming_sauron.sql
(+88 files in other folders)
