[package]
name = "artefact-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artefact"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.6.2", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
smol = "2.0"
base64 = "0.22"
lru = "0.12"
async-trait = "0.1"

wasmedge-sdk = { version = "0.13", optional = true }
wasmedge-types = { version = "0.4", optional = true }

[features]
default = ["wasm"]
wasm = ["wasmedge-sdk", "wasmedge-types"]
